--- a/templates/hospital.html
+++ b/templates/hospital.html
@@ -34,7 +34,7 @@
                     alert("The request to get user location timed out.");
                     break;
                 case error.UNKNOWN_ERROR:
-                    alert("An unknown error occurred.");
+                    alert("An unknown error occurredaaa.");
                     break;
             }
         }
