--- a/templates/index.html
+++ b/templates/index.html
@@ -281,6 +281,386 @@
   transform: scale(1.05);
 }
 
+.stocklist {
+  margin-top: 30px;
+  list-style-type: none;
+  padding: 0;
+  color: #d81b60;
+}
+
+.stocklist li {
+  background-color: #fff;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  padding: 10px 15px;
+  font-size: 1.4em;
+  color: #333;
+  display: flex;
+  justify-content: space-between;
+  transition: background-color 0.3s;
+}
+
+.stocklist li:hover {
+  background-color: #f9f9f9;
+}
+
+.stocklist li span {
+  font-weight: bold;
+}
+
+.strategy-box a {
+  color: #4a90e2;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.strategy-box a:hover {
+  color: #1854a3;
+}
+
+#chatbotHeader:hover {
+  background-color: #1d6fa5;
+}
+
+#openChatbot {
+  background-color: #1854a3;
+}
+
+#openChatbot:hover {
+  background-color: #1d6fa5;
+}
+
+.navbar {
+  background-image: linear-gradient(to right, #4a90e2, #1854a3);
+}
+#welcomeContainer {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  text-align: center;
+}
+
+.main-page-button {
+  margin: 10px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.main-page-button:hover {
+  background-color: #0056b3;
+}
+#technicalGraph {
+  display: none;
+}
+#chatbotContainer {
+  max-width: 600px;
+  margin: 20px auto;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+}
+
+/* Chatbot Header */
+#chatbotHeader {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+}
+
+/* Chatbot Messages */
+#chatbotMessages {
+  padding: 10px;
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+/* User Input Container */
+#userInputContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #f9f9f9;
+}
+
+/* User Input Field */
+#userInput {
+  flex-grow: 1;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+/* Send Button */
+#sendMessage {
+  margin-left: 10px;
+  padding: 8px 15px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#sendMessage:hover {
+  background-color: #0056b3;
+}
+
+/* User Message */
+.user-message {
+  text-align: right;
+  margin-bottom: 10px;
+}
+
+/* Bot Message */
+.bot-message {
+  text-align: left;
+  margin-bottom: 10px;
+}
+#technicalGraphContainer {
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin-top: 20px;
+  background-color: #f5f5f5;
+}
+
+.plot-image {
+  display: block;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th, td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+ /* Existing styles remain the same */
+
+ .plot-image {
+  cursor: pointer; /* Add cursor pointer to indicate clickability */
+}
+
+.expanded-image {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow: auto;
+}
+
+.expanded-image img {
+  display: block;
+  margin: auto;
+  max-width: 90%;
+  max-height: 90%;
+  margin-top: 50px; /* Space from the top */
+}
+#showMachine {
+  margin-top: 20px;
+}
+
+.welcome-message {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.preview-image {
+  max-width: 100%;
+  height: auto;
+  border: 1px solid #ccc;
+  padding: 5px;
+  cursor: pointer; /* Add pointer cursor for clickable effect */
+}
+
+.large-image {
+  display: none; /* Initially hide the large image */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 2;
+}
+
+.large-image img {
+  max-width: 90%;
+  max-height: 90%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.search-bar-container {
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  padding: 5px;
+  width:20%;
+  margin-left: 78%;
+  background-color: white;
+
+}
+
+.search-bar-input {
+  flex: 1;
+  border: none;
+  padding: 5px;
+  margin-left: 5px;
+  outline: none;
+}
+
+.fas.fa-search {
+  color: #3e1cae;
+  margin-right: 10px;
+  background-color: white;
+  
+}
+#userInputContainer{
+  position: absolute;
+    bottom: 0;
+    width: 100%; 
+    color: red;
+}
+#closeChatbot {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+/* For screens smaller than 992px */
+@media (max-width: 992px) {
+  .strategy-box {
+    flex: 1 1 47%;
+  }
+
+  .search-bar-container {
+    margin-left: 10%;
+    width: 60%;
+  }
+}
+
+/* For screens smaller than 768px */
+@media (max-width: 768px) {
+  #chatbotContainer {
+    right: 5%;
+    width: 92%;
+  }
+
+  .strategy-box {
+    flex: 1 1 100%;
+  }
+
+  .search-bar-container {
+    margin-left: 5%;
+    width: 70%;
+  }
+}
+
+/* For screens smaller than 576px */
+@media (max-width: 576px) {
+  .strategy-box {
+    margin: 10px;
+    padding: 15px;
+    font-size: 1.2em;
+  }
+
+  .search-bar-container {
+    margin-left: 2%;
+    width: 80%;
+  }
+
+  #chatbotContainer {
+    bottom: 10px;
+    right: 5%;
+    width: 90%;
+    max-width: 95%;
+  }
+}
+.banner-container {
+    overflow: hidden;
+    position: relative;
+    background-color: #f0f0f0;
+}
+.banner {
+    white-space: nowrap;
+    position: absolute;
+    animation: scrollLeft 30s linear infinite;
+}
+@keyframes scrollLeft {
+    0% { left: 100%; }
+    100% { left: -100%; }
+}
+.stock-item {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-right: 20px;
+    background-color: #333;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+}
+/* Style for the input field */
+#searchInput {
+  width: 300px; /* Adjust width as needed */
+  padding: 10px; /* Add padding for better visual appearance */
+  font-size: 16px; /* Adjust font size */
+  border: 1px solid #ccc; /* Add a border */
+  border-radius: 5px; /* Add border radius for rounded corners */
+  margin-left: 75%;
+}
+
+/* Style for the placeholder text */
+#searchInput::placeholder {
+  color: #999; /* Change the color of the placeholder text */
+}
+
+/* Style for the input field on focus */
+#searchInput:focus {
+  outline: none; /* Remove default focus outline */
+  border-color: #66afe9; /* Change border color on focus */
+  box-shadow: 0 0 5px #66afe9; /* Add a box shadow on focus */
+}
+
     </style>
 </head>
 
