--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disease Prediction</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,38 +37,40 @@
         }
 
         #backgroundContainer {
-            position: relative;
-            width: 100%;
-            height: 735px;
-            overflow: hidden;
-        }
-
-        #backgroundImg {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        #overlayText {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            color: #fff;
-            width: 100%;
-        }
-
-        #overlayText h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            color: rgb(157, 30, 30);
-        }
-
-        #overlayText p {
-            font-size: 1.2em;
-            color: rgb(13, 12, 12);
-        }
+          position: relative;
+          width: 100%;
+          height: 100vh;
+          overflow: hidden;
+      }
+      #backgroundImg {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+      }
+      #overlayText {
+          position: absolute;
+          top: 50%;
+          left: 0;
+          transform: translateY(-50%);
+          color: white;
+          padding: 20px;
+          width: 80%; /* Adjust width as needed */
+          max-width: 800px; /* Maximum width for larger screens */
+          text-align: left;
+      }
+      @media (max-width: 991.98px) {
+          #overlayText {
+              position: relative;
+              top: auto;
+              left: auto;
+              transform: none;
+              width: 100%; /* Full width on smaller screens */
+              max-width: none; /* No maximum width on smaller screens */
+              padding: 10px;
+              text-align: center;
+          }
+      }
+      
 
         #selectedSymptoms,
         #symptomList {
@@ -121,24 +123,13 @@
             color: #00796b;
         }
 
-        .navbar {
-            background-color: transparent !important;
-            margin-bottom: 0;
-            position: absolute;
-            width: 100%;
-            top: 0;
-            z-index: 100;
-        }
-
-        .navbar-brand {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: #000 !important;
-        }
-
-        .navbar-nav .nav-item .nav-link {
-            color: #000 !important;
-        }
+        #navbarNav {
+          text-align: center; /* Center align the nav items */
+      }
+      #navbarNav .nav-item {
+          display: inline-block; /* Display nav items inline */
+          margin: 0 10px; /* Adjust margin between nav items */
+      }
 
         footer {
             width: 100%;
@@ -665,49 +656,49 @@ tr:nth-child(even) {
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                    {% if 'user' in session %}
-                    <li class="nav-item">
-                      <a class="nav-link" onclick="confirmLogout()">LOGOUT</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                      <a class="nav-link" href="/login">LOGIN</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Background Image with Overlay Text -->
-    <div id="backgroundContainer">
-        <img id="backgroundImg" src="./static/background.png" alt="Background Image">
-        <div id="overlayText">
-            <h1><b>Disease Prediction System</b></h1>
-            <p>Enter symptoms below to predict possible diseases.</p>
-            <a href="#services" class="btn btn-primary">Get Started <i class="bi bi-chevron-down"></i></a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto"> <!-- mx-auto for horizontal centering -->
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+                {% if 'user' in session %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="confirmLogout()">LOGOUT</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">LOGIN</a>
+                </li>
+                {% endif %}
+            </ul>
         </div>
     </div>
+</nav>
+    <!-- Background Image with Overlay Text -->
+    <div id="backgroundContainer">
+      <img id="backgroundImg" src="./static/doctor-examines.jpg" alt="Background Image">
+      <div id="overlayText" class="col-md-6 offset-md-0">
+          <p class="fw-bolder fs-1">Find The Good Life<br>With <span class="text-success">Good Health</span></p>
+          <p class="text-dark fw-bold">Empower your health with our advanced disease prediction tool. Utilizing cutting-edge machine learning algorithms, our platform analyzes your symptoms to provide accurate and timely predictions, helping you take proactive steps towards better health. Trust in technology to guide your wellness journey.</p>
+          <a href="#services" class="btn btn-primary">Get Started <i class="bi bi-chevron-down"></i></a>
+      </div>
+  </div>
+
+
     <div id="chatbotContainer">
         <div id="chatbotHeader">
             Chatbot
@@ -952,6 +943,6 @@ tr:nth-child(even) {
     chatbotContainer.style.display = chatbotContainer.style.display === "none" ? "block" : "none";
 }
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
