--- a/templates/index.html
+++ b/templates/index.html
@@ -737,9 +737,6 @@ tr:nth-child(even) {
             <li class="nav-item">
               <a class="nav-link text-white fw-bold" href="#services">Services</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-white fw-bold" href="#contact">Contact</a>
-            </li>
             {% if 'user' in session %}
             <li class="nav-item">
               <a class="nav-link text-white fw-bold" href="#" onclick="confirmLogout()">LOGOUT</a>
@@ -809,7 +806,7 @@ tr:nth-child(even) {
           </div>
 
 
-          <div class="col-md-8">
+          <div class="col-md-8" id="services">
               <div class="row row-cols-1 row-cols-md-3 g-4">
                   <div class="col">
                       <div class="card service-card rounded-tl-br bg-info">
@@ -873,88 +870,6 @@ tr:nth-child(even) {
     </footer>
 
     <script>
-        const symptoms = [
-            'itching', 'skin_rash', 'nodal_skin_eruptions', 'continuous_sneezing', 'shivering', 'chills',
-            'joint_pain', 'stomach_pain', 'acidity', 'ulcers_on_tongue', 'muscle_wasting', 'vomiting',
-            'burning_micturition', 'spotting_urination', 'fatigue', 'weight_gain', 'anxiety',
-            'cold_hands_and_feets', 'mood_swings', 'weight_loss', 'restlessness', 'lethargy',
-            'patches_in_throat', 'irregular_sugar_level', 'cough', 'high_fever', 'sunken_eyes',
-            'breathlessness', 'sweating', 'dehydration', 'indigestion', 'headache', 'yellowish_skin',
-            'dark_urine', 'nausea', 'loss_of_appetite', 'pain_behind_the_eyes', 'back_pain',
-            'constipation', 'abdominal_pain', 'diarrhoea', 'mild_fever', 'yellow_urine', 'yellowing_of_eyes',
-            'acute_liver_failure', 'fluid_overload', 'swelling_of_stomach', 'swelled_lymph_nodes', 'malaise',
-            'blurred_and_distorted_vision', 'phlegm', 'throat_irritation', 'redness_of_eyes', 'sinus_pressure',
-            'runny_nose', 'congestion', 'chest_pain', 'weakness_in_limbs', 'fast_heart_rate',
-            'pain_during_bowel_movements', 'pain_in_anal_region', 'bloody_stool', 'irritation_in_anus',
-            'neck_pain', 'dizziness', 'cramps', 'bruising', 'obesity', 'swollen_legs', 'swollen_blood_vessels',
-            'puffy_face_and_eyes', 'enlarged_thyroid', 'brittle_nails', 'swollen_extremeties', 'excessive_hunger',
-            'extra_marital_contacts', 'drying_and_tingling_lips', 'slurred_speech', 'knee_pain', 'hip_joint_pain',
-            'muscle_weakness', 'stiff_neck', 'swelling_joints', 'movement_stiffness', 'spinning_movements',
-            'loss_of_balance', 'unsteadiness', 'weakness_of_one_body_side', 'loss_of_smell', 'bladder_discomfort',
-            'foul_smell_of_urine', 'continuous_feel_of_urine', 'passage_of_gases', 'internal_itching',
-            'toxic_look_(typhos)', 'depression', 'irritability', 'muscle_pain', 'altered_sensorium',
-            'red_spots_over_body', 'belly_pain', 'abnormal_menstruation', 'dischromic_patches', 'watering_from_eyes',
-            'increased_appetite', 'polyuria', 'family_history', 'mucoid_sputum', 'rusty_sputum', 'lack_of_concentration',
-            'visual_disturbances', 'receiving_blood_transfusion', 'receiving_unsterile_injections', 'coma',
-            'stomach_bleeding', 'distention_of_abdomen', 'history_of_alcohol_consumption', 'fluid_overload.1',
-            'blood_in_sputum', 'prominent_veins_on_calf', 'palpitations', 'painful_walking', 'pus_filled_pimples',
-            'blackheads', 'scurring', 'skin_peeling', 'silver_like_dusting', 'small_dents_in_nails', 'inflammatory_nails',
-            'blister', 'red_sore_around_nose', 'yellow_crust_ooze'
-        ];
-
-        const symptomList = document.getElementById('symptomList');
-        const selectedSymptoms = document.getElementById('selectedSymptoms');
-        const resultDiv = document.getElementById('result');
-        const predictButton = document.getElementById('predictButton');
-        const clearButton = document.getElementById('clearButton');
-
-        symptoms.forEach(symptom => {
-            const symptomItem = document.createElement('div');
-            symptomItem.className = 'symptom-item';
-            symptomItem.innerText = symptom;
-            symptomItem.onclick = () => addSymptom(symptom);
-            symptomList.appendChild(symptomItem);
-        });
-
-        function addSymptom(symptom) {
-            const existingSymptom = Array.from(selectedSymptoms.children).find(child => child.innerText === symptom);
-            if (!existingSymptom) {
-                const symptomItem = document.createElement('div');
-                symptomItem.className = 'symptom-item';
-                symptomItem.innerText = symptom;
-                symptomItem.onclick = () => removeSymptom(symptomItem);
-                selectedSymptoms.appendChild(symptomItem);
-            }
-        }
-
-        function removeSymptom(symptomItem) {
-            selectedSymptoms.removeChild(symptomItem);
-        }
-
-        predictButton.onclick = async () => {
-            const selected = Array.from(selectedSymptoms.children).map(child => child.innerText);
-
-            if (selected.length === 0) {
-                alert('Please select at least one symptom.');
-                return;
-            }
-
-            const response = await fetch('/predict', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(selected)
-            });
-
-            if (response.ok) {
-                const result = await response.json();
-                resultDiv.innerText = `Predicted Disease: ${result.predicted_disease}`;
-            } else {
-                resultDiv.innerText = 'Error: Could not predict disease.';
-            }
-        };
-
         clearButton.onclick = () => {
             while (selectedSymptoms.firstChild) {
                 selectedSymptoms.removeChild(selectedSymptoms.firstChild);
