--- a/templates/login.html
+++ b/templates/login.html
@@ -98,7 +98,7 @@
 <body>
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="card">
-            <div class="card-header text-light fw-bold fs-2">
+            <div class="card-header bg-info text-light fw-bold fs-2">
                 Login
             </div>
             <div class="card-body">
@@ -116,7 +116,8 @@
                         <label for="password" class="form-label text-light fw-semibold">Password</label>
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
-                    <button type="submit" class="btn btn-outline-light  w-100">Login</button>
+                    <button type="submit" class="btn btn-outline-info text-white  w-100 mb-3">Login</button>
+                    <button type="submit" class="btn btn-outline-info w-100 text-white" id="home">Back to Home</button>
                 </form>
                 <div class="text-center mt-3">
                     <a href="/signup" class="text-white">Don't have an account?</a>
@@ -127,5 +128,11 @@
     </div>
     <!-- Bootstrap JS (Optional, for Bootstrap features) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const back=document.getElementById('home');
+        back.onclick=()=>{
+            window.location.href='/';
+        }
+    </script>
 </body>
 </html>
