--- a/templates/index.html
+++ b/templates/index.html
@@ -743,7 +743,7 @@ tr:nth-child(even) {
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link text-white fw-bold" href="/login">LOGIN</a>
+              <a class="nav-link text-white fw-bold" href="/login">Login</a>
             </li>
             {% endif %}
           </ul>
