--- a/templates/index.html
+++ b/templates/index.html
@@ -755,7 +755,7 @@ tr:nth-child(even) {
     <img id="backgroundImg" src="./static/doctor-examines.jpg" alt="Background Image">
     <div id="overlayText" class="col-md-6 offset-md-0">
       <p class="fw-bolder fs-1">Find The Good Life<br>With <span class="text-info">Good Health</span></p>
-      <p class="text-white fw-bold">Empower your health with our advanced disease prediction tool. Utilizing cutting-edge machine learning algorithms, our platform analyzes your symptoms to provide accurate and timely predictions, helping you take proactive steps towards better health. Trust in technology to guide your wellness journey.</p>
+      <p class="text-white fw-semibold">Empower your health with our advanced disease prediction tool. Utilizing cutting-edge machine learning algorithms, our platform analyzes your symptoms to provide accurate and timely predictions, helping you take proactive steps towards better health. Trust in technology to guide your wellness journey.</p>
       <a href="#services" class="btn btn-outline-light w-50">Get Started <i class="bi bi-chevron-down"></i></a>
     </div>
   </div>
